# pandapower_vpp

./: .gitignore  AGENTS.md  CODEX_PROJECT_CONTEXT.md  README.md  pyproject.toml
agents/: README.md  grid_vpp_experiment_auditor.md  main_project_supervisor.md  marl_architecture_engineer.md  memory_curator_agent.md  power_system_modeling_auditor.md  ppvpp-agent-engineer.toml  ppvpp-architect.toml  ppvpp-domain-guardian.toml  ppvpp-experiment-critic.toml  ppvpp-market-mechanism-engineer.toml  ppvpp-memory-keeper.toml  ppvpp-simulator-engineer.toml  project_agent_registry.yaml  subagent_overlap_audit.md  ui_visualization_sync_agent.md
configs/: README.md  ablation_no_action_self_attention.yaml  ablation_no_sensitivity_edges.yaml  ablation_no_width_penalty.yaml  baseline_rule_v0.yaml  default_profiles.yaml  european_lv_benchmark_v2.yaml  european_lv_benchmark_v2_safety_tight.yaml  european_lv_benchmark_v2_sensitivity_attention_v1.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_legacy_v1_reward.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_reward_v2_minimal.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_reward_v2_minimal_contract_delivery_weight_10.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_reward_v2_minimal_contract_delivery_weight_20.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_reward_v2_minimal_contract_delivery_weight_5.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_reward_v2_minimal_no_portfolio_window_penalty.yaml  european_lv_benchmark_v2_sensitivity_attention_v1_reward_v2_minimal_no_shield_eval.yaml  (+9 more)
(+465 files in other folders)
